# spectrum-visualizer

./: CMakeLists.txt  README.md  reconf
example/: CMakeLists.txt  alsaMinCapture.c  pulseMinCapture.c  readAudioOutput.c
src/: CMakeLists.txt  deinterleave.c  deinterleave.h  main.c
